<resources>
    <string name="app_name">TheMovieLister</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="menu_main">Sections</string>

    //Activity and Fragment toolbar
    <string name="title_list">My Lists</string>
    <string name="title_search">Search</string>

    <string name="settings_text">Settings</string>
    <string name="settings_select_list">Change default list</string>

    //Main Pager Adapter
    <string name="main_pager_title_movies">Movies</string>
    <string name="main_pager_title_statistics">Statistics</string>

    <!-- Movie data labels -->
    <string name="movie_data_cast">Cast</string>
    <string name="movie_data_crew">Crew</string>
    <string name="movie_data_photos">Photos</string>
    <string name="movie_data_synopsis">Synopsis</string>
    <string name="movie_data_date">Release Date</string>
    <string name="movie_data_time">Runtime</string>
    <string name="movie_data_director">Director</string>
    <string name="movie_data_writer">Writer</string>

    <string name="system_loading">Loading</string>
    <string name="system_choose">Choose</string>
    <string name="system_cancel">Cancel</string>
    <string name="system_affirmative">Ok</string>
    <string name="system_negative">No</string>
    <string name="system_no_internet">No internet connection detected. Please make sure your WiFi connection or mobile data is on.</string>
</resources>
