<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/primary_text"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:layout_marginTop="8dip"
            android:layout_marginBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/movie_data_synopsis"/>
        <TextView
            android:id="@+id/movie_synopsis"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <TextView
            android:textColor="@color/primary_text"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:layout_marginTop="8dip"
            android:layout_marginBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/movie_data_date"/>
        <TextView
            android:id="@+id/movie_release_date"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <TextView
            android:textColor="@color/primary_text"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:layout_marginTop="8dip"
            android:layout_marginBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/movie_data_time"/>
        <TextView
            android:id="@+id/movie_runtime"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <View
            android:layout_marginTop="8dip"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/divider"/>
        <TextView
            android:textColor="@color/primary_text"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:layout_marginTop="8dip"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/movie_data_crew"/>

        <TextView
            android:textColor="@color/primary_text"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:layout_marginTop="8dip"
            android:layout_marginBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/movie_data_director"/>
        <TextView
            android:id="@+id/movie_director"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <TextView
            android:textColor="@color/primary_text"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:layout_marginTop="8dip"
            android:layout_marginBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/movie_data_writer"/>
        <TextView
            android:id="@+id/movie_writer"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>


        <View
            android:layout_marginTop="8dip"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/divider"/>
        <TextView
            android:textColor="@color/primary_text"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:layout_marginTop="8dip"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/movie_data_cast"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/movie_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>